[workspace]
members = ["packages/tools"]
default-members = ["packages/tools"]
resolver = "2"
exclude = [
    "linkchecker", # linkchecker is part of the CI workflow
    "listings",    # these are intentionally distinct from the workspace
    "tmp",         # listings are built here when updating output via tools/update-rustc.sh
]

[workspace.dependencies]
walkdir = "2.3.1"
docopt = "1.1.0"
serde = "1.0.226"
regex = "1.11.3"
lazy_static = "1.5.0"
flate2 = "1.1.2"
tar = "0.4.44"
